// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryIcon Test match snapshot CategoryIcon 1`] = `
<Icon
  color="#7C828E"
  name="settings"
  size={24}
  style={
    Array [
      Object {},
    ]
  }
/>
`;

exports[`CategoryIcon Test match snapshot CategoryIcon default value 1`] = `
<Icon
  color="#7C828E"
  name="list"
  size={24}
  style={
    Array [
      Object {},
    ]
  }
/>
`;
